--- a/src/Polly.Caching.MemoryCache.Net40Async.Specs/packages.config
+++ b/src/Polly.Caching.MemoryCache.Net40Async.Specs/packages.config
@@ -5,6 +5,8 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net45" />
+  <package id="Polly.Net40Async" version="5.0.6" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
