--- a/src/Polly.Caching.MemoryCache.Net45.Specs/Polly.Caching.MemoryCache.Net45.Specs.csproj
+++ b/src/Polly.Caching.MemoryCache.Net45.Specs/Polly.Caching.MemoryCache.Net45.Specs.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Polly, Version=5.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Polly.5.0.6\lib\net45\Polly.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
