--- a/src/Polly.Caching.MemoryCache.Net45.Specs/packages.config
+++ b/src/Polly.Caching.MemoryCache.Net45.Specs/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FluentAssertions" version="4.17.0" targetFramework="net45" />
   <package id="GitVersionTask" version="3.1.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
