--- a/src/Polly.Caching.MemoryCache.NetStandard10/project.json
+++ b/src/Polly.Caching.MemoryCache.NetStandard10/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "supports": {},
   "dependencies": {
-    "NETStandard.Library": "1.6.1"
+    "NETStandard.Library": "1.6.1",
+    "Polly": "5.0.6"
   },
   "frameworks": {
     "netstandard1.0": {}
