--- a/src/Polly.Caching.MemoryCache.Pcl.Specs/Polly.Caching.MemoryCache.Pcl.Specs.csproj
+++ b/src/Polly.Caching.MemoryCache.Pcl.Specs/Polly.Caching.MemoryCache.Pcl.Specs.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\packages\FluentAssertions.4.17.0\lib\portable-net40+sl5+win8+wp8+wpa81\FluentAssertions.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Polly, Version=5.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Polly.5.0.6\lib\netstandard1.0\Polly.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\packages\xunit.abstractions.2.0.0\lib\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.abstractions.dll</HintPath>
       <Private>True</Private>
