--- a/src/Polly.Caching.MemoryCache.Pcl.Specs/packages.config
+++ b/src/Polly.Caching.MemoryCache.Pcl.Specs/packages.config
@@ -2,6 +2,31 @@
 <packages>
   <package id="FluentAssertions" version="4.17.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="GitVersionTask" version="3.1.2" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Polly" version="5.0.6" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.IO" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Linq" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Threading" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="xunit" version="2.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="xunit.assert" version="2.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
