--- a/src/Polly.Caching.MemoryCache.nuspec
+++ b/src/Polly.Caching.MemoryCache.nuspec
@@ -13,20 +13,29 @@
     <tags>Exception Handling Resilience Transient Fault Policy Cache Aside Cache-aside</tags>
     <copyright>Copyright © 2017, App vNext</copyright>
     <releaseNotes>
+     ## 0.2-alpha
+
+     - Upgrade to msbuild15 build process
+     - Upgrade to Polly v5.3.1
+
      ## 0.1-alpha
 
      - Stub repo for Polly.Caching.MemoryCache with first build script
    </releaseNotes>
     <dependencies>
-      <group targetFramework="net45"/>
-      <group targetFramework="netstandard1.0">
+      <group targetFramework="net45">
+        <dependency id="Polly" version="5.3.1" />
+      </group>
+      <group targetFramework="netstandard1.3">
         <dependency id="NETStandard.Library" version="1.6.1" />
+        <dependency id="Polly" version="5.3.1" />
       </group>
       <group targetFramework="net40">
         <dependency id="Microsoft.Bcl.Async" version="1.0.168" />
         <dependency id="Microsoft.Bcl" version="1.1.10" />
         <dependency id="Microsoft.Bcl.Build" version="1.0.21" />
         <dependency id="Nito.AsyncEx" version="3.0.1" />
+        <dependency id="Polly.Net40Async" version="5.3.1" />
       </group>
     </dependencies>
   </metadata>
