--- a/src/Polly.Caching.MemoryCache.Net40Async.Specs/Polly.Caching.MemoryCache.Net40Async.Specs.csproj
+++ b/src/Polly.Caching.MemoryCache.Net40Async.Specs/Polly.Caching.MemoryCache.Net40Async.Specs.csproj
@@ -19,6 +19,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
@@ -29,7 +30,7 @@
     <PackageReference Include="Microsoft.Bcl" Version="1.1.10" />
     <PackageReference Include="Microsoft.Bcl.Async" Version="1.0.168" />
     <PackageReference Include="Microsoft.Bcl.Build" Version="1.0.21" />
-    <PackageReference Include="Polly.Net40Async" Version="5.3.1" />
+    <PackageReference Include="Polly.Net40Async" Version="5.3.2-v5-3-x-cachebeta0001" />
     <PackageReference Include="xunit" Version="2.1.0" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.1.0" />
   </ItemGroup>
@@ -39,7 +40,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Polly.Caching.MemoryCache.Net40Async\Polly.Caching.MemoryCache.Net40Async.csproj"/>
+    <ProjectReference Include="..\Polly.Caching.MemoryCache.Net40Async\Polly.Caching.MemoryCache.Net40Async.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
