--- a/src/Polly.Caching.MemoryCache.Net45/Polly.Caching.MemoryCache.Net45.csproj
+++ b/src/Polly.Caching.MemoryCache.Net45/Polly.Caching.MemoryCache.Net45.csproj
@@ -22,8 +22,9 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <PackageReference Include="GitVersionTask" Version="3.1.2" />
-    <PackageReference Include="Polly" Version="5.3.1" />
+    <PackageReference Include="Polly" Version="5.3.2-v5-3-x-cachebeta0001" />
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <Import Project="..\Polly.Caching.MemoryCache.Shared\Polly.Caching.MemoryCache.Shared.projitems" Label="Shared" />
 </Project>
