--- a/src/Polly.Caching.MemoryCache.NetStandard13/Polly.Caching.MemoryCache.NetStandard13.csproj
+++ b/src/Polly.Caching.MemoryCache.NetStandard13/Polly.Caching.MemoryCache.NetStandard13.csproj
@@ -27,5 +27,9 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.2" />
+    <PackageReference Include="Polly" Version="5.3.2-v5-3-x-cachebeta0001" />
+  </ItemGroup>
   <Import Project="..\Polly.Caching.MemoryCache.Shared\Polly.Caching.MemoryCache.Shared.projitems" Label="Shared" />
 </Project>
