Update Polly refs to v5.4.0

--- a/src/Polly.Caching.MemoryCache.Net40Async/Polly.Caching.MemoryCache.Net40Async.csproj
+++ b/src/Polly.Caching.MemoryCache.Net40Async/Polly.Caching.MemoryCache.Net40Async.csproj
@@ -34,7 +34,7 @@
     <PackageReference Include="Microsoft.Bcl" Version="1.1.10" />
     <PackageReference Include="Microsoft.Bcl.Build" Version="1.0.21" />
     <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
-    <PackageReference Include="Polly.Net40Async" Version="5.3.2-v5-3-x-cachebeta0001" />
+    <PackageReference Include="Polly.Net40Async" Version="5.4.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\GlobalAssemblyInfo.cs">
