Ensure Net40 dll is version-stamped

--- a/src/Polly.Caching.MemoryCache.Net40Async/Polly.Caching.MemoryCache.Net40Async.csproj
+++ b/src/Polly.Caching.MemoryCache.Net40Async/Polly.Caching.MemoryCache.Net40Async.csproj
@@ -22,6 +22,7 @@
     <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="3.1.2" />
     <PackageReference Include="Microsoft.Bcl" Version="1.1.10" />
     <PackageReference Include="Microsoft.Bcl.Build" Version="1.0.21" />
     <PackageReference Include="Nito.AsyncEx" Version="3.0.1" />
