Make Signed package reference Polly-Signed
Make Signed package reference Polly-Signed.  Bump version number to 1.1.0.

--- a/src/Polly.Caching.MemoryCache.nuspec
+++ b/src/Polly.Caching.MemoryCache.nuspec
@@ -13,6 +13,11 @@
     <tags>Polly Cache Caching Cache-aside</tags>
     <copyright>Copyright © 2018, App vNext</copyright>
     <releaseNotes>
+     1.1.0
+     ---------------------
+     - Polly.Caching.MemoryCache-Signed now references Polly-Signed 
+     - Reference Polly v5.9.0 to bring in cache fixes
+
      1.0-RC
      ---------------------
      - Upgrade to Polly v5.4.0
@@ -20,7 +25,6 @@
 
      0.2-alpha
      ---------------------
-
      - Upgrade to msbuild15 build process
      - Upgrade to Polly v5.3.1
 
