Remove the cache suffix from any assemblies/projects that end with MemoryCache, as the name Polly.Caching.Memory is descriptive enough and won't cause namespace clashes with any microsoft libraries.

--- a/src/Polly.Caching.Memory.NetStandard13.Specs/Polly.Caching.Memory.NetStandard13.Specs.csproj
+++ b/src/Polly.Caching.Memory.NetStandard13.Specs/Polly.Caching.Memory.NetStandard13.Specs.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,7 +28,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Polly.Caching.MemoryCache.NetStandard20\Polly.Caching.MemoryCache.NetStandard20.csproj" />
+    <ProjectReference Include="..\Polly.Caching.Memory.NetStandard13\Polly.Caching.Memory.NetStandard13.csproj" />
   </ItemGroup>
-  <Import Project="..\Polly.Caching.MemoryCache.SharedSpecs\Polly.Caching.MemoryCache.SharedSpecs.projitems" Label="Shared" />
+  <Import Project="..\Polly.Caching.Memory.SharedSpecs\Polly.Caching.Memory.SharedSpecs.projitems" Label="Shared" />
 </Project>
