--- a/src/Polly.Caching.Memory.nuspec
+++ b/src/Polly.Caching.Memory.nuspec
@@ -4,7 +4,7 @@
     <owners>App vNext</owners>
     <authors>App vNext</authors>
     <description>
-      Polly.Caching.MemoryCache is a plug-in for the .NET OSS resilience library Polly, supporting System.Runtime.Caching.MemoryCache as a provider for Polly's CachePolicy.
+      Polly.Caching.Memory is a plug-in for the .NET OSS resilience library Polly, supporting System.Runtime.Caching.MemoryCache as a provider for Polly's CachePolicy.
     </description>
     <language>en-US</language>
     <licenseUrl>https://raw.github.com/App-vNext/Polly/master/LICENSE.txt</licenseUrl>
@@ -34,20 +34,15 @@
 
    </releaseNotes>
     <dependencies>
-      <group targetFramework="net45">
-        <dependency id="Polly" version="5.9.0" />
-      </group>
       <group targetFramework="netstandard1.3">
         <dependency id="NETStandard.Library" version="1.6.1" />
-        <dependency id="Polly" version="5.9.0" />
+        <dependency id="Polly" version="6.0.1" />
         <dependency id="Microsoft.Extensions.Caching.Memory" version="1.1.2" />
       </group>
-      <group targetFramework="net40">
-        <dependency id="Microsoft.Bcl.Async" version="1.0.168" />
-        <dependency id="Microsoft.Bcl" version="1.1.10" />
-        <dependency id="Microsoft.Bcl.Build" version="1.0.21" />
-        <dependency id="Nito.AsyncEx" version="3.0.1" />
-        <dependency id="Polly.Net40Async" version="5.9.0" />
+      <group targetFramework="netstandard2.0">
+        <dependency id="NETStandard.Library" version="2.0.0" />
+        <dependency id="Polly" version="6.0.1" />
+        <dependency id="Microsoft.Extensions.Caching.Memory" version="2.0.2" />
       </group>
     </dependencies>
   </metadata>
