--- a/src/Polly.Caching.Memory.nuspec
+++ b/src/Polly.Caching.Memory.nuspec
@@ -13,6 +13,12 @@
     <tags>Polly Cache Caching Cache-aside</tags>
     <copyright>Copyright © 2018, App vNext</copyright>
     <releaseNotes>
+ 2.0.0
+     ---------------------
+- we now reference Polly version 6.0.1.
+- The namespaces have changed from Polly.Caching.MemoryCache to Polly.Caching.Memory.
+- .net 4 and 4.5 support has been removed with .net standard 2.0 added
+
      1.1.0
      ---------------------
      - Polly.Caching.MemoryCache-Signed now references Polly-Signed 
