--- a/src/Polly.Caching.Memory.nuspec
+++ b/src/Polly.Caching.Memory.nuspec
@@ -13,6 +13,10 @@
     <tags>Polly Cache Caching Cache-aside</tags>
     <copyright>Copyright © 2018, App vNext</copyright>
     <releaseNotes>
+     2.0.1
+     ---------------------
+     - Upgrade for compatibility with Polly v6.1.1
+
      2.0.0
      ---------------------
      - Provide a single signed package only.
@@ -44,12 +48,12 @@
     <dependencies>
       <group targetFramework="netstandard1.3">
         <dependency id="NETStandard.Library" version="1.6.1" />
-        <dependency id="Polly" version="6.0.1" />
+        <dependency id="Polly" version="6.1.1" />
         <dependency id="Microsoft.Extensions.Caching.Memory" version="1.1.2" />
       </group>
       <group targetFramework="netstandard2.0">
         <dependency id="NETStandard.Library" version="2.0.0" />
-        <dependency id="Polly" version="6.0.1" />
+        <dependency id="Polly" version="6.1.1" />
         <dependency id="Microsoft.Extensions.Caching.Memory" version="2.0.2" />
       </group>
     </dependencies>
