--- a/src/Polly.Caching.Memory.NetStandard13/Polly.Caching.Memory.NetStandard13.csproj
+++ b/src/Polly.Caching.Memory.NetStandard13/Polly.Caching.Memory.NetStandard13.csproj
@@ -29,7 +29,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.2" />
-    <PackageReference Include="Polly" Version="6.1.1" />
+    <PackageReference Include="Polly" Version="7.0.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <Import Project="..\Polly.Caching.Memory.Shared\Polly.Caching.Memory.Shared.projitems" Label="Shared" />
 </Project>
