--- a/src/Polly.Caching.Memory.nuspec
+++ b/src/Polly.Caching.Memory.nuspec
@@ -60,6 +60,7 @@
         <dependency id="NETStandard.Library" version="1.6.1" />
         <dependency id="Polly" version="7.0.0" />
         <dependency id="Microsoft.Extensions.Caching.Memory" version="1.1.2" />
+        <dependency id="System.ValueTuple" version="4.5.0" />
       </group>
       <group targetFramework="netstandard2.0">
         <dependency id="Polly" version="7.0.0" />
