--- a/src/Polly.Caching.Memory.Specs/Polly.Caching.Memory.Specs.csproj
+++ b/src/Polly.Caching.Memory.Specs/Polly.Caching.Memory.Specs.csproj
@@ -2,7 +2,15 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp1.1;netcoreapp2.0;net461;net472;netcoreapp3.0</TargetFrameworks>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\Polly.Caching.Memory\Polly.Caching.Memory.csproj" />
